updated gradle project generator